# gipSPlisHSPlasH

./: CMakeLists.txt  README.md  config.h.in  gipSPlisHSPlasH.cpp
libs/: CMakeLists.txt  README.md
libs/src/: CITATION.cff  Changelog.txt  MANIFEST.in  README.md  imgui.ini  setup.cfg  setup.py
libs/src/SPlisHSPlasH/: imgui.ini
libs/src/SPlisHSPlasH/CMake/: Common.cmake  DataCopyTargets.cmake  FindEigen3.cmake  NeighborhoodSearch.cmake  SetUpExternalProjects.cmake  avx.cmake
libs/src/SPlisHSPlasH/Utilities/: Version.h
libs/src/SPlisHSPlasH/doc/: Doxyfile  FoamGenerator.md  Makefile  MeshSkinning.md  PartioViewer.md  SurfaceSampling.md  VolumeSampling.md  about.md  architecture.md  bibliography.bib  bibliography.rst  build_from_source.md  cmake_options.md  conf.py  creating_pressure.md  file_format.md  getting_started.md  implement_exporter.md  implement_nonpressure_force.md  index.rst  macros.md  mainpage.dox  partio2vtk.md  py_creating_scenes.md  py_embedded_python.md  py_getting_started.md  py_restrictions.md  replicability.md  requirements.txt
libs/src/Tests/: CMakeLists.txt
libs/src/Tests/AVX/: AVXTests.cpp  CMakeLists.txt
libs/src/Tests/Kernel/: CMakeLists.txt  KernelTests.cpp
libs/src/Tests/ReadWriteState/: CMakeLists.txt  ReadWriteStateTests.cpp
libs/src/Tools/: CMakeLists.txt
libs/src/Tools/FoamGenerator/: CMakeLists.txt  FoamKernel.cpp  FoamKernel.h  main.cpp
libs/src/Tools/MeshSkinning/: CMakeLists.txt  main.cpp
libs/src/Tools/ParameterParser/: CMakeLists.txt  JsonSchemaGenerator.cpp  JsonSchemaGenerator.h  ParameterObjectParser.cpp  ParameterObjectParser.h  SceneExampleGenerator.cpp  SceneExampleGenerator.h  main.cpp
libs/src/Tools/PartioViewer/: CMakeLists.txt  PartioViewer.cpp  PartioViewer.h  main.cpp
libs/src/Tools/PartioViewer/GUI/: PartioViewer_GUI_Base.h
libs/src/Tools/PartioViewer/GUI/OpenGL/: PartioViewer_OpenGL.cpp  PartioViewer_OpenGL.h
libs/src/Tools/PartioViewer/GUI/imgui/: PartioViewer_GUI_imgui.cpp  PartioViewer_GUI_imgui.h
libs/src/Tools/SurfaceSampling/: CMakeLists.txt  main.cpp
libs/src/Tools/VolumeSampling/: CMakeLists.txt  SPHSamplingBase.cpp  SPHSamplingBase.h  SPHVolumeSampling.cpp  SPHVolumeSampling.h  SPHVolumeSampling_Jiang2015.cpp  SPHVolumeSampling_Jiang2015.h  SamplingBase.cpp  SamplingBase.h  main.cpp
libs/src/Tools/partio2vtk/: CMakeLists.txt  main.cpp
libs/src/Utilities/: AVX_math.h  BinaryFileReaderWriter.h  CMakeLists.txt  CholeskyAVXSolver.cpp  CholeskyAVXSolver.h  Counting.h  DebugTools.cpp  DebugTools.h  FileSystem.h  GaussQuadrature.cpp  GaussQuadrature.h  Logger.h  MathFunctions.cpp  MathFunctions.h  MatrixFreeSolver.h  MeshImport.cpp  MeshImport.h  OBJLoader.h  PLYLoader.h  PartioReaderWriter.cpp  PartioReaderWriter.h  PoissonDiskSampling.cpp  PoissonDiskSampling.h  RegularSampling2D.cpp  RegularSampling2D.h  RegularTriangleSampling.cpp  RegularTriangleSampling.h  SDFFunctions.cpp  SDFFunctions.h  SceneLoader.cpp  SceneLoader.h  SceneParameterObjects.cpp  SceneParameterObjects.h  SceneWriter.cpp  SceneWriter.h  SimpleQuadrature.cpp  SimpleQuadrature.h  StringTools.h  SurfaceSampling.h  SystemInfo.h  (+7 more)
libs/src/data/Scenes/Cache/: UnitBox_sb_vm_0.02500000037252902985_s3_0.5_3_r20_20_20_i0_t0.cdm
src/: gipSPlisHSPlasH.cpp  gipSPlisHSPlasH.h
